# lcs_problem

./: CMakeLists.txt  Makefile  README.md  TODO.txt
outputs/: distributed_output.out  parallel_output.out  serial_output.out
sample_outputs/: lcs_serial.txt
scripts/: distributed_script.py  generate_jobs_distributed.py  generate_jobs_parallel.py  generate_jobs_serial.py  generate_sbatch.py  parallel_output.out  parallel_script.py  serial_output.out  serial_script.py  temp_script.py
scripts/distributed/: distributed_output.out  extracted_results.txt  graph_distributed.py
scripts/parallel/: extracted_results.txt  generate_jobs_parallel.py  graph_parallel.py  parallel_output.out
scripts/serial/: extracted_results.txt  generate_jobs_serial.py  graph_serial.py  serial_output.out
solutions/: lcs_distributed.cpp  lcs_parallel.cpp  lcs_parallel_mpi.cpp  lcs_serial.cpp
